--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,6 @@
-autopep8               1.6.0
-beautifulsoup4         4.10.0
-certifi                2021.10.8
-cffi                   1.15.0
-charset-normalizer     2.0.8
-cryptography           36.0.1
-idna                   3.3
-mysql-connector-python 8.0.27
-pip                    21.3.1
-protobuf               3.19.1
-psycopg2               2.9.2
-pycodestyle            2.8.0
-pycparser              2.21
-PyMySQL                1.0.2
-requests               2.26.0
-secure-smtplib         0.1.1
-setuptools             57.4.0
-soupsieve              2.3.1
-toml                   0.10.2
-urllib3                1.26.7
+requests-2.26.0
+requests 2.26.0
+requests
+psycopg2-2.9.2
+psycopg2 2.9.2
+psycopg2
